--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles==23.2.1
 aiohttp==3.8.6
+aiohttp-retry==2.8.3
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==3.7.1
@@ -18,15 +19,17 @@ colorhash==2.0.0
 configparser==6.0.0
 dataclasses-json==0.5.14
 Deprecated==1.2.14
+distro==1.8.0
 dnspython==2.4.2
+exceptiongroup==1.2.0
 fastapi==0.100.1
 fastapi-socketio==0.0.10
 filetype==1.2.0
-Flask==3.0.0
+flask==3.0.0
 Flask-JWT-Extended==4.5.3
 Flask-MonitoringDashboard==3.1.2
 Flask-PyMongo==2.3.0
-Flask-SQLAlchemy==3.1.1
+flask-sqlalchemy==3.1.1
 frozenlist==1.4.0
 googleapis-common-protos==1.61.0
 greenlet==3.0.0
@@ -51,7 +54,7 @@ nest-asyncio==1.5.8
 nodeenv==1.8.0
 numexpr==2.8.7
 numpy==1.26.1
-openai==0.28.1
+openai==1.3.9
 opentelemetry-api==1.20.0
 opentelemetry-exporter-otlp==1.20.0
 opentelemetry-exporter-otlp-proto-common==1.20.0
@@ -66,7 +69,7 @@ prisma==0.10.0
 protobuf==4.24.4
 psutil==5.9.6
 pydantic==2.4.2
-pydantic_core==2.10.1
+pydantic-core==2.10.1
 PyJWT==2.8.0
 pymongo==4.5.0
 python-dotenv==1.0.0
@@ -87,18 +90,20 @@ starlette==0.27.0
 syncer==2.0.3
 tenacity==8.2.3
 tiktoken==0.5.1
+tinydb==4.8.0
 tomli==2.0.1
 tomlkit==0.12.1
 tqdm==4.66.1
+twilio==8.11.0
+typing-extensions==4.8.0
 typing-inspect==0.9.0
-typing_extensions==4.8.0
 tzlocal==2.0.0
 uptrace==1.20.2
 urllib3==2.0.7
 uvicorn==0.23.2
 watchfiles==0.20.0
 websockets==11.0.3
-Werkzeug==3.0.0
+werkzeug==3.0.0
 wrapt==1.15.0
 wsproto==1.2.0
 yarl==1.9.2
