docker-service up and running

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,19 @@
 http {
     upstream inventory-agent {
-        server inventory-agent:5001;
+        server inventory-agent:5001; # Use the service name here
     }
     upstream customer-agent {
-        server customer-agent:9000;
+        server customer-agent:9000; # Use the service name here
     }
 
     server {
         listen 80;
 
-        location /inventory-agent/ {
+        location /inventory-agent/ { # The URI can be anything you choose
             proxy_pass http://inventory-agent/;
         }
 
-        location /customer-agent/ {
+        location /customer-agent/ { # The URI can be anything you choose
             proxy_pass http://customer-agent/;
         }
     }
