--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,9 @@ http {
     upstream customer-agent {
         server customer-agent:9000; # Use the service name here
     }
+    upstream auth {
+        server auth:5000;
+    }
 
     server {
         listen 80;
@@ -15,6 +18,10 @@ http {
 
         location /customer-agent/ { # The URI can be anything you choose
             proxy_pass http://customer-agent/;
+        }
+
+        location /auth/ {
+            proxy_pass http://auth/;
         }
     }
 }
