--- a/customer_service/requirements.txt
+++ b/customer_service/requirements.txt
@@ -1,6 +1,10 @@
-Flask==3.0.0
-flask_sqlalchemy==3.1.1
-openai==1.6.1
-Requests==2.31.0
+Flask
+flask_cors
+flask_sqlalchemy
+openai==1.12.0
+requests==2.28.1
+SQLAlchemy
 tinydb==4.8.0
-twilio==8.11.0
+twilio==8.13.0
+python-dotenv==0.21.1
+gunicorn==20.1.0
