--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -1,6 +1,9 @@
 Flask==3.0.0
+flask_migrate
 flask_sqlalchemy==3.1.1
 PyJWT==2.8.0
 Werkzeug==3.0.1
 flask_cors==3.0.10
 stripe
+gunicorn
+psycopg2-binary
