--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
   inventory-agent:
     build: ./stock_service/inventory_agent
     environment:
-      - SQLALCHEMY_DATABASE_URI=postgresql://postgres:alicia2134@cloud_sql_proxy:5432/postgres
+      - SQLALCHEMY_DATABASE_URI=postgresql://alicia:alicia@cloud_sql_proxy:3306/alicia
     networks:
       - webnet
       - sqlnet
