--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
   auth:
     build: ./auth_service
     environment:
-      - SQLALCHEMY_DATABASE_URI=postgresql://alicia:alicia@cloud_sql_proxy:5432/alicia
+      - SQLALCHEMY_DATABASE_URI=postgresql://alicia:alicia@cloud_sql_proxy/alicia
     networks:
       - webnet
       - sqlnet
