--- a/stock_service/inventory_agent/Dockerfile
+++ b/stock_service/inventory_agent/Dockerfile
@@ -21,4 +21,4 @@ ENV NEW_RELIC_CONFIG_FILE=newrelic.ini
 EXPOSE 5001
 
 # Command to run the application
-CMD ["newrelic-admin", "run-program", "python", "app.py"]
+CMD ["gunicorn", "app:create_app()", "--bind", "0.0.0.0:5001", "--workers", "3"]
