--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,22 +9,42 @@ http {
         server auth:5000;
     }
 
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
+        server_name your_domain.com www.your_domain.com; # Replace with your domain name
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl;
+        server_name your_domain.com www.your_domain.com; # Replace with your domain name
+
+        ssl_certificate /etc/letsencrypt/live/api.nortedev.net/fullchain.pem; # Path to your fullchain.pem
+        ssl_certificate_key /etc/letsencrypt/live/api.nortedev.net/privkey.pem; # Path to your privkey.pem
+
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
         location /inventory-agent/ { # The URI can be anything you choose
             proxy_pass http://inventory-agent/;
-            proxy_read_timeout 1000s;  # Timeout after 3 minutes
+            proxy_read_timeout 1000s;  # Adjust if necessary
         }
 
         location /customer-agent/ { # The URI can be anything you choose
             proxy_pass http://customer-agent/;
-            proxy_read_timeout 1000s;  # Timeout after 3 minutes
+            proxy_read_timeout 1000s;  # Adjust if necessary
         }
 
         location /auth/ {
             proxy_pass http://auth/;
-            proxy_read_timeout 1000s;  # Timeout after 3 minutes
+            proxy_read_timeout 1000s;  # Adjust if necessary
         }
     }
 }
