--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,16 @@
 version: '3.8'
 
 services:
-  nginx:
-    build: ./nginx
+  webserver:
+    image: nginx:latest
     ports:
-      - "80:80"
+      - 80:80
+      - 443:443
+    restart: always
+    volumes:
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./nginx/certbot/conf:/etc/letsencrypt/:ro
     networks:
       - webnet
 
