--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,8 @@ services:
     restart: always
     volumes:
       - ./nginx/conf/:/etc/nginx/conf.d/:ro
-      - ./certbot/www:/var/www/certbot/:ro
-      - ./nginx/certbot/conf:/etc/letsencrypt/:ro
+      - ./certbot/www:/var/www/certbot/
+      - ./nginx/certbot/conf:/etc/letsencrypt/
     networks:
       - webnet
 
