--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     restart: always
     volumes:
       - ./nginx/conf/:/etc/nginx/conf.d/:ro
-      - ./certbot/www:/var/www/certbot/
+      - ./nginx/certbot/www:/var/www/certbot/
       - ./nginx/certbot/conf:/etc/letsencrypt/
     networks:
       - webnet
