--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
     # Redirect HTTP to HTTPS
     server {
         listen 80;
-        server_name your_domain.com www.your_domain.com; # Replace with your domain name
+        server_name api.nortedev.net www.api.nortedev.net; # Replace with your domain name
 
         location / {
             return 301 https://$host$request_uri;
