--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,23 @@
 http {
     upstream inventory-agent {
-        server inventory-agent:5001; # Use the service name here
+        server inventory-agent:5001;
     }
     upstream customer-agent {
-        server customer-agent:9000; # Use the service name here
+        server customer-agent:9000;
     }
     upstream auth {
         server auth:5000;
     }
 
-    # Redirect HTTP to HTTPS
+    # Redirect HTTP to HTTPS, except ACME challenge requests
     server {
         listen 80;
-        server_name api.nortedev.net www.api.nortedev.net; # Replace with your domain name
+        server_name api.nortedev.net www.api.nortedev.net;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot; # Ensure this path matches the one used in your Docker volume setup
+            try_files $uri =404;
+        }
 
         location / {
             return 301 https://$host$request_uri;
@@ -22,29 +27,29 @@ http {
     # HTTPS server
     server {
         listen 443 ssl;
-        server_name your_domain.com www.your_domain.com; # Replace with your domain name
+        server_name api.nortedev.net www.api.nortedev.net;
 
-        ssl_certificate /etc/letsencrypt/live/api.nortedev.net/fullchain.pem; # Path to your fullchain.pem
-        ssl_certificate_key /etc/letsencrypt/live/api.nortedev.net/privkey.pem; # Path to your privkey.pem
+        ssl_certificate /etc/letsencrypt/live/api.nortedev.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.nortedev.net/privkey.pem;
 
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
 
-        location /inventory-agent/ { # The URI can be anything you choose
+        location /inventory-agent/ {
             proxy_pass http://inventory-agent/;
-            proxy_read_timeout 1000s;  # Adjust if necessary
+            proxy_read_timeout 1000s;
         }
 
-        location /customer-agent/ { # The URI can be anything you choose
+        location /customer-agent/ {
             proxy_pass http://customer-agent/;
-            proxy_read_timeout 1000s;  # Adjust if necessary
+            proxy_read_timeout 1000s;
         }
 
         location /auth/ {
             proxy_pass http://auth/;
-            proxy_read_timeout 1000s;  # Adjust if necessary
+            proxy_read_timeout 1000s;
         }
     }
 }
