--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,9 +8,10 @@ services:
       - 443:443
     restart: always
     volumes:
-      - ./nginx/:/etc/nginx/conf.d/:ro
-      - ./nginx/certbot/www:/var/www/certbot/
-      - ./nginx/certbot/conf:/etc/letsencrypt/
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d/:/etc/nginx/conf.d/:ro
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
     networks:
       - webnet
 
