this time its gonna work

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - ./nginx/conf.d/:/etc/nginx/conf.d/:ro
       - ./nginx/certbot/conf:/etc/letsencrypt
       - ./nginx/certbot/www:/var/www/certbot
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     networks:
       - webnet
 
