this time its gonna work

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,38 +19,38 @@ http {
             try_files $uri =404;
         }
 
-        # location / {
-        #     return 301 https://$host$request_uri;
-        # }
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 
     # HTTPS server
-    # server {
-    #     listen 443 ssl;
-    #     server_name api.nortedev.net www.api.nortedev.net;
+    server {
+        listen 443 ssl;
+        server_name api.nortedev.net www.api.nortedev.net;
 
-    #     ssl_certificate /etc/letsencrypt/live/api.nortedev.net/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/api.nortedev.net/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/api.nortedev.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.nortedev.net/privkey.pem;
 
-    #     ssl_session_cache shared:SSL:10m;
-    #     ssl_session_timeout 10m;
-    #     ssl_ciphers HIGH:!aNULL:!MD5;
-    #     ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
-    #     location /inventory-agent/ {
-    #         proxy_pass http://inventory-agent/;
-    #         proxy_read_timeout 1000s;
-    #     }
+        location /inventory-agent/ {
+            proxy_pass http://inventory-agent/;
+            proxy_read_timeout 1000s;
+        }
 
-    #     location /customer-agent/ {
-    #         proxy_pass http://customer-agent/;
-    #         proxy_read_timeout 1000s;
-    #     }
+        location /customer-agent/ {
+            proxy_pass http://customer-agent/;
+            proxy_read_timeout 1000s;
+        }
 
-    #     location /auth/ {
-    #         proxy_pass http://auth/;
-    #         proxy_read_timeout 1000s;
-    #     }
-    # }
+        location /auth/ {
+            proxy_pass http://auth/;
+            proxy_read_timeout 1000s;
+        }
+    }
 }
 events {}
